--- a/HousingCommunalServicesClassLibrary/HousingCommunalServicesClassLibrary.csproj
+++ b/HousingCommunalServicesClassLibrary/HousingCommunalServicesClassLibrary.csproj
@@ -5,7 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis.Sheets.v4" Version="1.44.1.1881" />
     <PackageReference Include="Npgsql" Version="4.1.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="GoogleAPI\" />
   </ItemGroup>
 
 </Project>
