--- a/HousingCommunalServicesTestTask/HousingCommunalServicesTestTask.csproj
+++ b/HousingCommunalServicesTestTask/HousingCommunalServicesTestTask.csproj
@@ -9,4 +9,10 @@
     <ProjectReference Include="..\HousingCommunalServicesClassLibrary\HousingCommunalServicesClassLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="credentials.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
